DSND-631: Introduce Request authenticator filter to check Eric headers in request (Security)